--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -7,11 +7,11 @@
    background: rgba(131,16,27,1);
    background: linear-gradient(0deg, rgba(131,16,27,1) 0%, rgba(59,25,30,1) 100%);
    
-
-   height: 100vh;
    /* height: 65vh;
     width: 100%; */
     min-height: fit-content;
+    padding-bottom: 5rem;
+
 }
 ame {
     width: 80%;
@@ -31,8 +31,6 @@ aboutMe h2,h3{
 }
 .myImg img{
     height: 45vh;
-    /* border-radius: 500px;
-    border: black 2px solid; */
     box-shadow: 10px 38px 67px 6px rgba(0,0,0,0.8);
 -webkit-box-shadow: 10px 38px 67px 6px rgba(0,0,0,0.8);
 -moz-box-shadow: 10px 38px 67px 6px rgba(0,0,0,0.8);
@@ -67,8 +65,14 @@ transition: all 1s ease-in-out;
     50%{
         border-radius: 30% 60% 70% 40%/50% 60% 30% 60%
     }
+   
     100%{
         border-radius: 60% 40% 30% 70%/60% 30% 70% 40%
     }
     
+}
+@media only screen and (max-width: 1072px){
+    .ill img{
+        padding-top: 6rem;
+    }
 }
