--- a/src/styles/education.css
+++ b/src/styles/education.css
@@ -1,8 +1,9 @@
 .education{
     background: rgb(59,25,30);
     background: linear-gradient(0deg, rgba(59,25,30,1) 0%, rgba(131,16,27,1) 100%);
-    height: 100vh;
-min-height: fit-content;
+    min-height: fit-content;
+
+    padding-bottom: 8rem;
 }
 
 #ed{
@@ -15,34 +16,7 @@ h1{
     /* padding-top: 3vh; */
     font-family: 'Tilt Prism', cursive;
 }
-.school{
-    width: 45%;
-    padding: 5vh;
-   
-}
-.college{
-    width: 45%;
-    padding: 5vh;
-}
-.image img{
-    width: 60%;
-    height: 40vh;
-    opacity: 1;
-    margin: auto;
-}
-.image{
-    display: block;
-}
-.content{
-    width: 60%;
-    box-shadow: 10px 38px 49px 6px rgba(0,0,0,0.75);
--webkit-box-shadow: 10px 38px 49px 6px rgba(0,0,0,0.75);
--moz-box-shadow: 10px 38px 49px 6px rgba(0,0,0,0.75);
-    padding-bottom: 3vh;
-    background-color: bisque;
-    text-align: center;
-    margin: auto;
-}
+
 @media only screen and (max-width: 767px){
 .education{
     display: flex;
@@ -59,24 +33,17 @@ flex-wrap: wrap;
     height: fit-content;
     width: auto;
 }
-.school{
-display: block;
-margin: auto;
-width: 85%;
-padding-bottom: 5rem;
-}
-.college{
-    width: 85%;
-    display: block;
+.edu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 80%;
     margin: auto;
-    padding-bottom: 6rem;
 }
 
-.image img{
-    width: 100%;
+
+.schoolDiv{
+margin-bottom: 5rem;    
 }
 
-.content{
-    width: 100%;
-}
 }
