--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,7 +1,8 @@
 .project{
     background: rgb(59,25,30);
     background: linear-gradient(0deg, rgba(59,25,30,1) 0%, rgba(131,16,27,1) 100%);
-    height: 100vh;
+    min-height: fit-content;
+    padding-bottom: 5rem;
 }
 /* .image img{
     height: 100%;
