--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -1,5 +1,6 @@
 .skills{
     background: rgba(131,16,27,1);
    background: linear-gradient(0deg, rgba(131,16,27,1) 0%, rgba(59,25,30,1) 100%);
+   padding-bottom: 8rem;
 /* height: 140vh; */
 }
